[package]
name = "worley_biomes"
version = "0.3.0"
edition = "2024"

[features]
default = []
bevy = ["dep:bevy", "dep:bevy-inspector-egui"]
serde = ["dep:serde", "dep:ron"]

[dependencies]
bracket-fast-noise = {git="https://github.com/countcb/bracket-fast-noise.git", branch = "main" }
rand = "0.9.2"
tinyvec = {version="1.10", features =["alloc"]}
fxhash = "0.2.1"

# optional serialization
serde = { version= "1", features = ["derive"], optional = true }
ron = {version = "0.12", optional = true}

# not required, used in examples, and we have a debug_plugin for bevy 
bevy = {version = "0.18", optional = true}
bevy-inspector-egui = {version = "0.36", optional = true}

[dev-dependencies]
# benchmarking
criterion = {version="0.7", features = ["html_reports"]}

[[example]]
name = "3d"
path = "examples/3d.rs"
required-features = ["bevy"]

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["bevy"]

[[bench]]
name = "benches"
harness = false
